# dependabot-pyproject

./: pyproject.toml
.github/: dependabot.yml
