[project]
name = "test-project"
description = ""
version = "0.0.0"
requires-python = ">=3.11,<3.13"


[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "test_project" }]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dagster = "1.9.2"
dagster-aws = "0.25.2"
dagster-azure = "0.25.2"
duckdb = "~1.1.1"
inflection = "0.5.1"
jsonpatch = "1.33"
pymongo = "~4.11.1"
retry = "0.9.2"
adlfs = "2024.4.1"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
dagster-webserver = "1.9.2"
autoflake = "*"
clickhouse-connect = "*"
pytest = "^8.0.0"
ruff = "^0.5.0"
mypy = "^1.7.0"
pre-commit = "^3.7.0"
types-PyYAML = "^6.0.12.12"
types-requests = "^2.31.0.6"
pytest-mock = "^3.12.0"
notebook = "*"
pylint = "*"
memory_profiler = "*"

[tool.setuptools.packages.find]
include = ["test_project*"]

[tool.dagster]
module_name = "test_project"
code_location_name = "test_project"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint.messages_control]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
disable = "C0330, C0326"

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S%z"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::dagster.ExperimentalWarning",
]